@@ -21,14 +21,14 @@ import java.util.Iterator;
 import java.util.List;
 
 /**
- * Column holding nullable boolean values.<br>
+ * A Column holding nullable boolean values.<br>
  * Any values not explicitly set are considered null. This class uses the primitive 
  * wrapper object as the underlying data structure.
  * 
  * @see BooleanColumn
  *
  */
-public class NullableBooleanColumn extends NullableColumn {
+public final class NullableBooleanColumn extends NullableColumn {
 
     /**
      * The unique type code of all <code>NullableBooleanColumns</code>
@@ -41,7 +41,17 @@ public class NullableBooleanColumn extends NullableColumn {
      * 	Constructs an empty <code>NullableBooleanColumn</code>.
      */
     public NullableBooleanColumn(){
-        this.entries = new Boolean[0];
+        this(0);
+    }
+
+    /**
+     * Constructs a <code>NullableBooleanColumn</code> with the specified length.<br>
+     * All column entries are set to null
+     * 
+     * @param length The initial length of the column to construct
+     */
+    public NullableBooleanColumn(final int length){
+        this.entries = new Boolean[length];
     }
 
     /**
@@ -51,6 +61,22 @@ public class NullableBooleanColumn extends NullableColumn {
      */
     public NullableBooleanColumn(final String name){
         this();
+        if((name == null) || (name.isEmpty())){
+            throw new IllegalArgumentException("Column name must not be null or empty");
+        }
+        this.name = name;
+    }
+
+    /**
+     * Constructs a <code>NullableBooleanColumn</code> with the specified label
+     * and the specified length.<br>
+     * All column entries are set to null
+     * 
+     * @param name The name of the column to construct. Must not be null or empty
+     * @param length The initial length of the column to construct
+     */
+    public NullableBooleanColumn(final String name, final int length){
+        this(length);
         if((name == null) || (name.isEmpty())){
             throw new IllegalArgumentException("Column name must not be null or empty");
         }
@@ -178,9 +204,11 @@ public class NullableBooleanColumn extends NullableColumn {
     public Column clone(){
         final Boolean[] clone = new Boolean[entries.length];
         for(int i=0; i<entries.length; ++i){
-            clone[i] = (entries[i] != null ? new Boolean(entries[i]) : null);
+            clone[i] = (entries[i] != null ? Boolean.valueOf(entries[i]) : null);
         }
-        return new NullableBooleanColumn(clone);
+        return ((name != null) && !name.isEmpty())
+                ? new NullableBooleanColumn(name, clone)
+                : new NullableBooleanColumn(clone);
     }
 
     @Override
@@ -211,12 +239,12 @@ public class NullableBooleanColumn extends NullableColumn {
     }
 
     @Override
-    public Object getValueAt(int index){
+    public Object getValue(int index){
         return entries[index];
     }
 
     @Override
-    public void setValueAt(int index, Object value){
+    public void setValue(int index, Object value){
         entries[index] = (Boolean)value;
     }
 
@@ -226,13 +254,246 @@ public class NullableBooleanColumn extends NullableColumn {
     }
 
     @Override
+    public String typeName(){
+        return "boolean";
+    }
+
+    @Override
+    public int capacity(){
+        return entries.length;
+    }
+
+    @Override
     public boolean isNumeric(){
         return false;
     }
 
     @Override
-    protected int capacity(){
-        return entries.length;
+    public int memoryUsage(){
+        return (entries.length / 8) + ((entries.length % 8 != 0) ? 1 : 0);
+    }
+
+    @Override
+    public Column convertTo(byte typeCode){
+        Column converted = null;
+        switch(typeCode){
+        case ByteColumn.TYPE_CODE:
+            final byte[] bytes = new byte[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    bytes[i] = (byte) (entries[i] ? 1 : 0);
+                }else{
+                    bytes[i] = 0;
+                }
+            }
+            converted = new ByteColumn(bytes);
+            break;
+        case ShortColumn.TYPE_CODE:
+            final short[] shorts = new short[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    shorts[i] = (short) (entries[i] ? 1 : 0);
+                }else{
+                    shorts[i] = 0;
+                }
+            }
+            converted = new ShortColumn(shorts);
+            break;
+        case IntColumn.TYPE_CODE:
+            final int[] ints = new int[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    ints[i] = (entries[i] ? 1 : 0);
+                }else{
+                    ints[i] = 0;
+                }
+            }
+            converted = new IntColumn(ints);
+            break;
+        case LongColumn.TYPE_CODE:
+            final long[] longs = new long[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    longs[i] = (entries[i] ? 1l : 0l);
+                }else{
+                    longs[i] = 0;
+                }
+            }
+            converted = new LongColumn(longs);
+            break;
+        case StringColumn.TYPE_CODE:
+            final String[] strings = new String[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    strings[i] = String.valueOf(entries[i]);
+                }else{
+                    strings[i] = StringColumn.DEFAULT_VALUE;
+                }
+            }
+            converted = new StringColumn(strings);
+            break;
+        case FloatColumn.TYPE_CODE:
+            final float[] floats = new float[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    floats[i] = (entries[i] ? 1.0f : 0.0f);
+                }else{
+                    floats[i] = 0.0f;
+                }
+            }
+            converted = new FloatColumn(floats);
+            break;
+        case DoubleColumn.TYPE_CODE:
+            final double[] doubles = new double[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    doubles[i] = (entries[i] ? 1.0 : 0.0);
+                }else{
+                    doubles[i] = 0.0;
+                }
+            }
+            converted = new DoubleColumn(doubles);
+            break;
+        case CharColumn.TYPE_CODE:
+            final char[] chars = new char[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    chars[i] = (entries[i] ? '1' : '0');
+                }else{
+                    chars[i] = CharColumn.DEFAULT_VALUE;
+                }
+            }
+            converted = new CharColumn(chars);
+            break;
+        case BooleanColumn.TYPE_CODE:
+            final boolean[] bools = new boolean[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    bools[i] = entries[i];
+                }else{
+                    bools[i] = false;
+                }
+            }
+            converted = new BooleanColumn(bools);
+            break;
+        case BinaryColumn.TYPE_CODE:
+            final byte[][] bins = new byte[entries.length][];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    bins[i] = (entries[i] ? new byte[]{(byte)1} : new byte[]{(byte)0});
+                }else{
+                    bins[i] = new byte[]{(byte)0};
+                }
+            }
+            converted = new BinaryColumn(bins);
+            break;
+        case NullableByteColumn.TYPE_CODE:
+            final Byte[] bytesn = new Byte[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    bytesn[i] = (byte) (entries[i] ? 1 : 0);
+                }else{
+                    bytesn[i] = null;
+                }
+            }
+            converted = new NullableByteColumn(bytesn);
+            break;
+        case NullableShortColumn.TYPE_CODE:
+            final Short[] shortsn = new Short[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    shortsn[i] = (short) (entries[i] ? 1 : 0);
+                }else{
+                    shortsn[i] = null;
+                }
+            }
+            converted = new NullableShortColumn(shortsn);
+            break;
+        case NullableIntColumn.TYPE_CODE:
+            final Integer[] intsn = new Integer[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    intsn[i] = (entries[i] ? 1 : 0);
+                }else{
+                    intsn[i] = null;
+                }
+            }
+            converted = new NullableIntColumn(intsn);
+            break;
+        case NullableLongColumn.TYPE_CODE:
+            final Long[] longsn = new Long[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    longsn[i] = (entries[i] ? 1l : 0l);
+                }else{
+                    longsn[i] = null;
+                }
+            }
+            converted = new NullableLongColumn(longsn);
+            break;
+        case NullableStringColumn.TYPE_CODE:
+            final String[] stringsn = new String[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    stringsn[i] = String.valueOf(entries[i]);
+                }else{
+                    stringsn[i] = null;
+                }
+            }
+            converted = new NullableStringColumn(stringsn);
+            break;
+        case NullableFloatColumn.TYPE_CODE:
+            final Float[] floatsn = new Float[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    floatsn[i] = (entries[i] ? 1.0f : 0.0f);
+                }else{
+                    floatsn[i] = null;
+                }
+            }
+            converted = new NullableFloatColumn(floatsn);
+            break;
+        case NullableDoubleColumn.TYPE_CODE:
+            final Double[] doublesn = new Double[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    doublesn[i] = (entries[i] ? 1.0 : 0.0);
+                }else{
+                    doublesn[i] = null;
+                }
+            }
+            converted = new NullableDoubleColumn(doublesn);
+            break;
+        case NullableCharColumn.TYPE_CODE:
+            final Character[] charsn = new Character[entries.length];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    charsn[i] = (entries[i] ? '1' : '0');
+                }else{
+                    charsn[i] = null;
+                }
+            }
+            converted = new NullableCharColumn(charsn);
+            break;
+        case NullableBooleanColumn.TYPE_CODE:
+            converted = this.clone();
+            break;
+        case NullableBinaryColumn.TYPE_CODE:
+            final byte[][] binsn = new byte[entries.length][];
+            for(int i=0; i<entries.length; ++i){
+                if(entries[i] != null){
+                    binsn[i] = (entries[i] ? new byte[]{(byte)1} : new byte[]{(byte)0});
+                }else{
+                    binsn[i] = null;
+                }
+            }
+            converted = new NullableBinaryColumn(binsn);
+            break;
+        default:
+            throw new DataFrameException("Unknown column type code: " + typeCode);
+        }
+        converted.name = this.name;
+        return converted;
     }
 
     @Override
